[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
rustsbi = "0.3.2"
buddy_system_allocator = "0.9.0"
spin = "0.9.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
opt-level = 0